# conan-juce-test

./: CMakeLists.txt  Info.plist  conanfile.txt
scripts/cmake/: conan.cmake
src/: hello.cpp  hello.h  main.cpp
